codepkg/objects/Application_Contact__c.object
<CustomObject>
    <description>This object is the junction between Home Hardening Application(HH Application) and Contact object.</description>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Contact object in order to capture the number of Applications for each Contact.</description>
        <inlineHelpText>Lookup to Contact object in order to capture the number of Applications for each Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Application_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Application__c</fullName>
        <description>Lookup to Home Hardening Application(HH Application) object in order to capture the number of Applications for each Contact.</description>
        <inlineHelpText>Lookup to Home Hardening Application(HH Application) object in order to capture the number of Applications for each Contact.</inlineHelpText>
        <label>HH Application</label>
        <referenceTo>HH_Application__c</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Application_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Head_of_Household__c</fullName>
        <label>Head of Household?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Homeowner__c</fullName>
        <label>Relationship to Homeowner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Household Member</fullName>
                </value>
                <value>
                    <fullName>Co-owner</fullName>
                </value>
                <value>
                    <fullName>Deed</fullName>
                    <isActive>false</isActive>
                    <label>Deed</label>
                </value>
                <value>
                    <fullName>Member</fullName>
                    <isActive>false</isActive>
                    <label>Member</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Co_Owners</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Deed</value>
        </filters>
        <label>Co Owners</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Application-Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>